--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,41 +1,90 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+<link rel="stylesheet" href="/css/board.css">
+<link rel="stylesheet"type="text/js" href="/js/board.js">
+<link rel="stylesheet" href="/css/bootstrap.css">
+<head> <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="/js/top.js"></script>
 </head>
+<style>
+    .nav-item .nav-link {
+        color: gray;
+    }
+    .container-fluid .navbar-brand{
+        color: gray;
+    }
+</style>
 <body>
-<div class="container">
-    <div>
-        <h1>Hello Spring</h1>
-        <p>회원 기능</p>
-        <p>
-            <a href="/members/new">회원 가입</a>
-            <a href="/members">회원 목록</a>
-            <a href="/questions/new">질문 작성</a>
-            <a href="/questions/questionList">질문리스트</a>
-        </p>
+<div class="top" style="background-color: #20c997">
+
+</div>
+<div class="gap"></div>
+
+
+
+<div class="grid-container">
+    <div class="left">
+        <div class="dropdown">
+            <button class="dropbtn" type="button">
+                 <span
+                         class="dropbtn_icon">Tags</span>
+            </button>
+            <ul class="dropdown-content">
+                <li><a href="/questions/tagList?tags=C">C</a></li>
+                <li><a href="/questions/tagList?tags=Pawnable">Pawnable</a></li>
+                <li><a href="/questions/tagList?tags=Reversing">Reversing</a></li>
+                <li><a href="/questions/tagList?tags=Web">Web</a></li>
+                <li><a href="/questions/tagList?tags=Crypto">Crypto</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="center">
+        <div id="container_1">
+            <div class="card" style="background-color: rgba(63, 151, 155, 0.62);">
+                <img  src="https://dreamhack.io/assets/img/rank_1.a680c13.svg"  style="width: 40px;height: 85px;" alt="1등">
+                <div class="words">
+                    <h3 style="color:#fff">실시간 채택왕</h3>
+                    <p style="font-size: large;
+        font-style:inherit; font-weight:bold;
+       "th:text="${answerKings.getName()}"></p>
+                    <p style="font-size: large;
+        font-style:inherit; font-weight:bold;
+       "th:text="${answerKings.getScore()}+'점'"></p>
+                </div>
+                <div class="image">
+<img src="https://avatars.githubusercontent.com/u/102720771?v=4" style="width:80%; height:80%;">
+                </div>
+            </div>
+            <div class="card" style="background-color: rgba(63, 151, 100, 0.62);">
+                <img  src="https://dreamhack.io/assets/img/rank_1.a680c13.svg"  style="width: 40px;height: 85px;" alt="1등">
+                <div class="words">
+                    <h3 style="color:#fff">실시간 질문왕</h3>
+                    <p style="font-size: large;
+        font-style:inherit; font-weight:bold;
+       "th:text="${askKings.getName()}"></p>
+                    <p style="font-size: large;
+        font-style:inherit; font-weight:bold;
+       "th:text="${askKings.getAsk.size()}+'개'"></p>
+                </div>
+                <div class="image">
+                    <img src="https://avatars.githubusercontent.com/u/102720771?v=4" style="width:80%; height:80%;">
+                </div>
+            </div>
+            <div class="card" style="background-color: rgba(50, 151, 100, 0.62);">
+                <img  src="https://dreamhack.io/assets/img/rank_1.a680c13.svg"  style="width: 40px;height: 85px;" alt="1등">
+                <div class="words">
+                    <h3 style="color:#fff">실시간 보안왕</h3>
+
+                </div>
+            </div>
+    <div class="right"></div>
     </div>
 
+
 </div>
-
-<div>
-    <ul><p>태그별 검색</p>
-        <li><a href="/questions/tagList?tags=Pawnable">Pawnable</a></li>
-        <li><a href="/questions/tagList?tags=Reversing">Reversing</a></li>
-        <li><a href="/questions/tagList?tags=Web">Web</a></li>
-        <li><a href="/questions/tagList?tags=Crypto">Crypto</a></li>
-
-
-
-    </ul>
 </div>
 
 
-<div style="height: 50px;"></div>
-<form style="display:flex; width:50%; margin:auto; background-color: #00FF00; height: 50px; align-items: center; justify-content: center;" th:action="@{/search}" method="get">
-    <input style="width:80%; height: 80%" type="text" name="query" placeholder="Search"/>
-    <button type="submit" style="width:20%; height: 80%">Go</button>
-</form>
+
 </body>
 </html>
