--- a/src/main/resources/static/css/board.css
+++ b/src/main/resources/static/css/board.css
@@ -81,6 +81,8 @@ textarea.wmd-input,textarea#wmd-input{
 }
 .left{
     grid-column: 1/3;
+    position:fixed;
+    z-index: 1000;
 }
 .center {
 
@@ -91,11 +93,9 @@ textarea.wmd-input,textarea#wmd-input{
 }
 .grid-container {
     display: grid;
-    grid-template-columns: 20% 55% 25%; /* sets the width of each column */
+    grid-template-columns: 20% 65% 15%; /* sets the width of each column */
 }
-.btn-group {
-    display: flex;
-}
+
 .btn-group button, .btn-group form,li {
     display: inline-block;
 }
@@ -140,4 +140,226 @@ code {
     justify-content: flex-end;
     height: 44px;
     border-bottom: 1px solid hsl(210,8%,75%);
+}
+.top{
+    position:fixed;
+    top:0px;
+    z-index: 1000;
+    width: 100%;
+    background-color: #20c997;
+}
+.gap{
+    height: 100px;
+}
+body{
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    color: hsl(210,8%,20%);
+    margin: 0;
+    padding: 0;
+}
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+
+.dropdown{
+    background-color: #f5f5f5;
+    position : relative;
+    display : inline-block;
+}
+
+.dropbtn_icon{
+    font-family : 'Material Icons';
+
+}
+.dropbtn{
+    border : 1px solid #205E61;
+    border-radius : 4px;
+    background-color: #205E61;
+    font-weight: 400;
+    color : rgb(255, 255, 255);
+    padding : 12px;
+    width :200px;
+    text-align: left;
+    cursor : pointer;
+    font-size : 12px;
+}
+.dropdown-content {
+    list-style: none;
+    padding-left:0px;
+    display : none;
+    position : absolute;
+    z-index : 1; /* in front of other elements */
+    font-weight: 400;
+    background-color:  rgba(63, 151, 155, 0.62);
+    min-width : 200px;
+    flex-direction: column; /* prevent line break */
+}
+
+.dropdown-content a {
+    display : inline-block; /* display items in a single line */
+    text-decoration : none;
+    color : rgb(37, 37, 37);
+    font-size: 12px;
+    padding : 12px 20px;
+    width: 200px;
+
+}
+
+
+
+
+
+
+.dropdown-content a:hover{
+    background-color :#3F979B;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+.top_nav{
+    background-color:#205E61;
+}
+
+nav_bar{
+    background-color: #205E61;
+    display:inline-block;
+}
+nav_bar:hover{
+    background-color:rgba(63, 151, 155, 0.62);
+}
+nav_bar:active{
+    background-color:rgba(63, 151, 155, 0.62);
+}
+nav_bar a{
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.top{
+    padding:0.5em 0;
+    background-color:#20c997;
+}
+.navbar {
+    background-color: #333;
+    overflow: hidden;
+}
+.navbar a {
+    float: top;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+.navbar a:hover {
+    background-color: #ddd;
+    color: black;
+}
+.contents{
+
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    word-break:break-all;
+
+
+    height: 30px;
+
+}
+.nav-item .nav-link {
+    color: gray;
+}
+.container-fluid .navbar-brand{
+    color: gray;
+}
+
+#container_1{
+    width: 320px;
+    margin: 50px auto;
+    display: grid;
+    grid-gap: 10px;
+}
+
+.card{
+    position: relative;
+    margin: 20px 10px;
+    border: 1px solid #fff;
+    background-color: rgba(63, 151, 155, 0.62);
+}
+.words{
+    position: absolute;
+    left: 40px;
+    top: 300px;
+    padding: 10px;
+    text-align: left;
+}
+.image{
+    position:absolute;
+    left: 280px;
+    width: 280px;
+    top:10px;
+
+}
+.image img{
+    width: 100%;
+    height: 100%;
+}
+/* 중복된 부분은 작성하지 않는다! */
+@media screen and (max-width:768px){
+    #container_1{
+        width: auto;
+        margin: 50px auto;
+        grid-template-columns: repeat(1,1fr);
+    }
+    .card{
+        position: relative;
+        width: 550px;
+        height: 250px;
+    }
+    .words{
+        position: absolute;
+        top:15px;
+        width: 200px;
+    }
+}
+@media screen and (min-width:768px) and (max-width:1719px){
+    #container_1{
+        width: auto;
+        margin: 50px auto;
+        grid-template-columns: repeat(3,1fr);
+    }
+    .card{
+        position: relative;
+        width: 350px;
+        height: 180px;
+    }
+    .words{
+        position: absolute;
+        top:15px;
+        width: 200px;
+    }
+}
+
+@media screen and (min-width:1720px){
+    #container_1{
+        right:100px;
+        width: auto;
+        margin: 50px auto;
+        grid-template-columns: repeat(3,1fr);
+    }
+    .card{
+        position: relative;
+
+        width: 550px;
+        height: 250px;
+    }
+    .words{
+        position: absolute;
+        top:15px;
+        width: 200px;
+    }
 }
