--- a/src/main/resources/templates/members/createMemberForm.html
+++ b/src/main/resources/templates/members/createMemberForm.html
@@ -1,41 +1,75 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
+<link rel=stylesheet type="text/css" href="/css/board.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+<link rel="stylesheet" href="/css/bootstrap.css">
+<head> <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="/js/top.js"></script>
+</head>
 <body>
-<div class="container">
-    <form action="/members/new" method="post">
-        <div class="form-group">
-            <label for="name">이름</label>
-            <input type="text" id="name" name="name" placeholder="이름을
+<div class="top">
+    </div>
+    <div class="gap"></div>
+
+<div class="grid-container">
+    <div class="left">
+        <div class="dropdown">
+            <button class="dropbtn" type="button">
+                 <span
+                         class="dropbtn_icon">Tags</span>
+            </button>
+            <ul class="dropdown-content">
+                <li><a href="/questions/tagList?tags=C">C</a></li>
+                <li><a href="/questions/tagList?tags=Pawnable">Pawnable</a></li>
+                <li><a href="/questions/tagList?tags=Reversing">Reversing</a></li>
+                <li><a href="/questions/tagList?tags=Web">Web</a></li>
+                <li><a href="/questions/tagList?tags=Crypto">Crypto</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="center">
+        <br>
+        <br>
+        <br>
+        <div class="container" style="align-items: center; justify-content: center;">
+            <form action="/members/new" method="post" style="display: flex; flex-direction: column; align-items: center; justify-content: center; ">
+                <div class="form-group">
+                    <label for="name">이름</label>
+                    <input type="text" id="name" name="name" placeholder="이름을
 입력하세요">
-        </div>
-        <div class="form-group">
-            <label for="id">아이디</label>
-            <input type="text" id="id" name="id" placeholder="아이디를 입력하세요">
-        </div>
-        <div class="form-group">
-            <label for="password">비밀번호</label>
-            <input type="password" id="password" name="password" placeholder="비밀번호를 입력하세요">
+                </div>
+                <div class="form-group">
+                    <label for="id">아이디</label>
+                    <input type="text" id="id" name="id" placeholder="아이디를 입력하세요">
+                </div>
+                <div class="form-group">
+                    <label for="password">비밀번호</label>
+                    <input type="password" id="password" name="password" placeholder="비밀번호를 입력하세요">
 
-        </div>
-        <div class="form-group">
-            <label for="email">이메일</label>
-            <input type="email" id="email" name="email" placeholder="이메일을 입력하세요">
-        </div>
-        <div class="form-group">
-            <label for="GitHub">GitHub 주소</label>
-            <input type="text" id="GitHub" name="github" placeholder="GitHub 주소를 입력하세요">
-        </div>
-        <div class="form-group">
-            <label for="blog">블로그 주소</label>
-            <input type="text" id="blog" name="blog" placeholder="블로그 주소를 입력하세요">
-        </div>
-
-
+                </div>
+                <div class="form-group">
+                    <label for="email">이메일</label>
+                    <input type="email" id="email" name="email" placeholder="이메일을 입력하세요">
+                </div>
+                <div class="form-group">
+                    <label for="GitHub">GitHub 주소</label>
+                    <input type="text" id="GitHub" name="github" placeholder="GitHub 주소를 입력하세요">
+                </div>
+                <div class="form-group">
+                    <label for="blog">블로그 주소</label>
+                    <input type="text" id="blog" name="blog" placeholder="블로그 주소를 입력하세요">
+                </div>
 
 
-        <button type="submit">등록</button>
-    </form>
-</div> <!-- /container -->
+
+
+                <button type="submit">등록</button>
+            </form>
+        </div> <!-- /container -->
+
+    </div>
+    <div class="right"></div>
+</div>
 
 
 </body>
