--- a/src/main/resources/templates/questions/write.html
+++ b/src/main/resources/templates/questions/write.html
@@ -1,54 +1,134 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
+<link href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="/css/board.css">
+<!-- include summernote css/js -->
+<link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
+<script src="/js/summer.js"></script>
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+<link rel="stylesheet" href="/css/bootstrap.css">
+
 <head>
 
-  <title>Title</title>
 </head>
+<style>
+  .left{
+    grid-column: 1/3;
+  }
+  .center {
+
+    grid-column: 2 / 3; /* spans the second column */
+  }
+  .right {
+    grid-column: 3/ 3; /* spans the third column */
+  }
+  .grid-container {
+    display: grid;
+    grid-template-columns: 20% 55% 25%; /* sets the width of each column */
+  }
+
+  ul{
+    padding: 0;
+  }
+  li{
+    display: inline-block;
+  }
+
+</style>
+
+
 <body>
-<div style="height: 50px;"></div>
-<form style="display:flex; width:50%; margin:auto; background-color: #00FF00; height: 50px; align-items: center; justify-content: center;" th:action="@{/searchList}" method="post">
-  <input style="width:80%; height: 80%" type="text" name="contents" placeholder="Search"/>
-  <button type="submit" style="width:20%; height: 80%">Go</button>
-</form>
-<div style="display:flex; align-items: center; justify-content: center; width: 100%; height: 100%;">
-  <form action="/questions/new/questionList" method="post" class="ask-submit" style="display: flex; flex-direction: column;align-items: center; justify-content: center; width: 50%; height: 50%;">
-    <div style="margin: 10px;">
-      <input type="text" id="title" name="title" placeholder="제목을 입력하세요" style="width: 100%; height: 30px; font-size: 18px;">
-    </div>
-    <div style="margin: 10px; text-align: center;">
-      <label for="contents" style="font-size: 20px;">내용</label>
-      <textarea id="contents" name="contents" placeholder="내용을 입력하세요" style="width: 200%; height: 200px; font-size: 18px;"></textarea>
-    </div>
-    <div style="margin: 10px;">
-      <label for="tags" style="font-size: 18px;">태그</label>
-      <select id="tags" name="tags" style="width: 100%; height: 30px; font-size: 18px;">
-        <option value="Web">Web</option>
-        <option value="Reversing">Reversing</option>
-        <option value="Pawnable">Pawnable</option>
-        <option value="Crypto">Crypto</option>
-      </select>
-    </div>
 
-    <button type="submit" style="width: 50%; height: 30px; font-size: 18px;">작성</button>
-  </form>
+<div class="top">
 
+  <nav class="navbar navbar-expand-lg bg-light" style="background-color: #20c997">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">K.Knock</a>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
+          </li>
+          <li class="nav-item" style="color: #1a1e21!important;">
+            <a class="nav-link" href="/members">회원목록</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/members/new">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/questions/questionList">질문목록</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/questions/new">질문 작성</a>
+          </li>
+        </ul>
+        <form action="/search" name="search" class="d-flex" role="search" method="post">
+          <input class="form-control me-2" type="text" placeholder="Search" name="search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+      </div>
+    </div>
+  </nav>
 
 </div>
+<div class="gap"></div>
+<div class="left">
+  <div class="dropdown">
+    <button class="dropbtn" type="button">
+                 <span
+                         class="dropbtn_icon">Tags</span>
+    </button>
+    <ul class="dropdown-content">
+      <li><a href="/questions/tagList?tags=C">C</a></li>
+      <li><a href="/questions/tagList?tags=Pawnable">Pawnable</a></li>
+      <li><a href="/questions/tagList?tags=Reversing">Reversing</a></li>
+      <li><a href="/questions/tagList?tags=Web">Web</a></li>
+      <li><a href="/questions/tagList?tags=Crypto">Crypto</a></li>
+    </ul>
+  </div>
+</div>
+<div class="center">
+
+  <div style="height: 50px;"></div>
+
+  <div style="display:flex; align-items: center; justify-content: center; ">
+    <form action="/questions/new/questionList" method="post" style="display: flex; flex-direction: column; align-items: center; justify-content: center; ">
+
+      <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; ">
+        <input type="text" id="title" name="title" placeholder="제목을 입력하세요" style="border-radius: 5px; width: 396%; padding:5px;">
+      </div>
+      <div style="height: 5px;"></div>
+      <div class="answer-box">
+
+        <div class="pt-1">
+
+          <textarea class="summernote" id="wmd-input" name="contents" placeholder="내용을 입력하세요" style="width: 200%; height: 300%; tab-size: 10;"></textarea>
+        </div>
+        <div style="margin: 10px;">
+          <label for="tags" style="font-size: 18px;">태그 : </label>
+          <select id="tags" name="tags" style="width: 100px; height: 30px; font-size: 18px;">
+            <option value="C">C</option>
+            <option value="Network">Network</option>
+            <option value="Web">Web</option>
+            <option value="Reversing">Reversing</option>
+            <option value="Pawnable">Pawnable</option>
+            <option value="Crypto">Crypto</option>
+            <option value="Misc">Misc</option>
+          </select>
+        </div>
+        <input type="checkbox" name="anonymous" value="true">
+      </div>
+      <button type="submit" id="write" style="width: 50%; height: 30px; font-size: 18px;">작성</button>
+    </form>
+  </div>
+</div>
+</div>
+<div class="right"></div>
 </body>
-<script>
-  document.getElementById("replySubmit").addEventListener("submit", function(event) {
-    event.preventDefault();
-    let markdownText = document.getElementById("contents").value;
 
-
-    function marked(markdownText) {
-      return "";
-    }
-
-    document.getElementById("contents").innerHTML = marked(markdownText);
-    // form submit
-    this.submit();
-
-  });
-</script>
 </html>
