--- a/src/main/resources/templates/members/memberList.html
+++ b/src/main/resources/templates/members/memberList.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <link rel="stylesheet" href="/css/bootstrap.css">
 <head> <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="/js/top.js"></script>
+    
 </head>
 <style>
 
@@ -40,8 +40,8 @@
                         <a class="nav-link" href="/questions/new">질문 작성</a>
                     </li>
                 </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <form action="/search" name="search" class="d-flex" role="search" method="post">
+                    <input class="form-control me-2" type="text" placeholder="Search" name="search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
             </div>
