--- a/src/main/resources/templates/questions/view.html
+++ b/src/main/resources/templates/questions/view.html
@@ -11,31 +11,78 @@
         referrerpolicy="no-referrer"
 />
 
-<link href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+<link href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">-->
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 
-<!-- include summernote css/js -->
-<link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
-<head>
-    <script src="/js/top.js"></script>
-</head>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
+<link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-bs4.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-bs4.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
 <script src="/js/summer.js"></script>
 <style>
+    .tag-box {
+        border: 1px solid rgba(0, 0, 0, 0.2); /* 테두리 스타일 지정 */
+        padding: 5px; /* 안쪽 여백 지정 */
+        display: inline-block;
+        background: #8cb7e0; /* 배경색 지정 */
+        height:30px;    /* 인라인 요소로 배치 */
+    }
 
-
+    .tag {
+        opacity: 0.8; /* 투명도 지정 */
+    }
+    pre {
+        display: block;
+        font-size: 87.5%;
+        color: #212529;
+    }
+    pre {
+        margin-top: 0;
+        margin-bottom: 1rem;
+        overflow: auto;
+        -ms-overflow-style: scrollbar;
+    }
+    pre, code, kbd, samp {
+        font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+        font-size: 1em;
+    }
 
 </style>
-<th:block layout:fragment="title">
-    <title>상세 페이지</title>
-</th:block>
+
 <body>
-
-
 <div class="top">
+    <nav class="navbar navbar-expand-lg bg-light" style="background-color: #20c997">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">K.Knock</a>
 
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                    </li>
+                    <li class="nav-item" style="color: #1a1e21!important;">
+                        <a class="nav-link" href="/members">회원목록</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/members/new">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/questions/questionList">질문목록</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/questions/new">질문 작성</a>
+                    </li>
+                </ul>
+                <form action="/search" name="search" class="d-flex" role="search" method="post">
+                    <input class="form-control me-2" type="text" placeholder="Search" name="search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+            </div>
+        </div>
+    </nav>
 </div>
 <div class="gap"></div>
 <div class="grid-container">
@@ -60,9 +107,16 @@
                 <div>
 
                     <h1 th:text="${asks.title}"></h1>
+                    <br>
+                    <hr>
                     <pre th:utext="${@commonUtil.markdown(asks.contents)}" class="markdown-body"></pre>
-                    <p th:text="${asks.tags}"></p>
-                    <p th:text="${asks.getWriter().getName()}" th:if="${asks.anonymous==false}"></p>
+
+                    <div class="tag-box">
+                        <div class="tag">
+                            <p th:text="${asks.tags}"></p>
+                        </div>
+                    </div>
+                    <p th:text="'작성자:  '+${asks.getWriter().getName()}" th:if="${asks.anonymous==false}" style="text-align:right;"></p>
                     <div class="btn-group">
                         <form th:action="@{|/questions/edit/${asks.no}|}" th:method="get">
 
@@ -94,7 +148,7 @@
 
                     <div class="answer-between">
                    <pre th:utext="${@commonUtil.markdown(comment.reply)}" th:rows="4" class="markdown-body"></pre>
-                         <p th:text="${comment.getWriter().getName()}"></p>
+                         <p th:text="'작성자  '+${comment.getWriter().getName()}" style="text-align:right;"></p>
                      </div>
                 </div>
                   <hr>
@@ -108,32 +162,34 @@
 
 <div class="card">
 
-                            <p th:text="${comment.getWriter().getName()}"> writer:</p>
+
 
 
                     <pre th:utext="${@commonUtil.markdown(comment.reply)}" th:rows="4" class="markdown-body"></pre>
-                    <div class="btn-group">
+                         <p th:text="'작성자  '+${comment.getWriter().getName()}" style="text-align:right;"> writer:</p>
+    <div class="btn-group">
 
                          <button type="button"
                                  th:onclick="'edit('+${comment.commentNo}+')'"
-                                  th:id="'edit-button'+${comment.commentNo}">edit</button>
+                                  th:id="'edit-button'+${comment.commentNo}">수정</button>
 
                      </form>
                     <form th:action="@{|/questions/comment/delete/${comment.commentNo}|}" th:if="${comment.getWriter().getNo()==1}">
 
-                        <button type="submit" >delete</button>
+                        <button type="submit" >삭제</button>
                     </form>
 
 
                         <form th:action="@{|/questions/comment/selected/${comment.commentNo}|}" method="post" th:if="${comment.getWriter().getNo()==1}">
-                                <button type="submit" >selected</button>
+                                <button type="submit" >채택</button>
                         </form>
                          <button type="button"
                                  th:onclick="'reply('+${comment.commentNo}+')'"
-                                  th:id="'reply-button'+${comment.commentNo}">reply</button>
+                                  th:id="'reply-button'+${comment.commentNo}">답장</button>
 
 
                     </div>
+
 
                           <form th:action ="@{|/questions/comment/edit/${comment.commentNo}|}"
                                 th:if="${comment.getWriter().getNo()==1}"
@@ -141,13 +197,13 @@
                                 th:id="'edit'+${comment.commentNo}" method="post">
 
                           <textarea name="reply" class="summernote"
-                                    th:placeholder="${comment.reply}"></textarea>
-                        <button type="submit" >modify</button>
+                                    th:text="${comment.reply}"></textarea>
+                        <button type="submit" >수정</button>
                           </form>
                          <form th:action="@{|/questions/comment/${asks.no}/reply|}" method="post" th:id="'reply'+${comment.commentNo}" style="display: none" >
                            <textarea class="summernote" name="reply" ></textarea>
                             <input type="hidden" name="commentGroup" th:value="${comment.commentNo}"/>
-                            <button type="submit" >reply</button>
+                            <button type="submit" >답장</button>
                         </form>
 </div>
                     <span th:each="reply: ${reply}" th:if="${reply.commentGroup == comment.commentNo}" class="reply">
@@ -156,28 +212,28 @@
 
 
                         <pre th:utext="${@commonUtil.markdown(reply.reply)}" class="markdown-body"  th:rows="4"></pre>
-                        <p th:text="${reply.getWriter().getName()}"> writer:</p>
+                        <p th:text="'작성자: '+${reply.getWriter().getName()}" style="text-align:right;"> writer:</p>
 
 
                         <div class="btn-group">
                             <button type="button"
                                     th:onclick="'edit('+${reply.commentNo}+')'"
-                                    th:id="'edit-button'+${reply.commentNo}">edit</button>
+                                    th:id="'edit-button'+${reply.commentNo}">수정</button>
 
                             <!--delete comment -->
 
 
                              <form th:action="@{|/questions/comment/delete/${reply.commentNo}|}" th:if="${reply.getWriter().getNo()==1}">
                                  <!-- th:if="${reply.getMember().getNo()==SesstionLogin}"> -->
-                                 <button type="submit" >delete</button>
+                                 <button type="submit" >삭제</button>
                              </form>
 
                             <form th:action="@{|/questions/comment/selected/${reply.commentNo}|}" method="post" th:if="${reply.getWriter().getNo()==1}">
-                                <button type="submit" >selected</button>
+                                <button type="submit" >채택</button>
                             </form>
                               <button type="button"
                                       th:onclick="'reply('+${reply.commentNo}+')'"
-                                      th:id="'reply-button'+${reply.commentNo}">reply</button>
+                                      th:id="'reply-button'+${reply.commentNo}">답장</button>
 
 
                         </div>
@@ -189,15 +245,15 @@
 
                         <textarea name="reply" class="summernote"
                                   th:placeholder="${reply.reply}"
-                                  aria-labelledby="your-answer-header" tabindex="101" data-min-length=""></textarea>
-                              <!--th:placeholder="${reply.reply}"-->
-                            <button type="submit" >modify</button>
+                                  aria-labelledby="your-answer-header" tabindex="101" data-min-length="" th:text="${reply.reply}"></textarea>
+
+                            <button type="submit" >수정</button>
                          </form>
 
                         <form th:action="@{|/questions/comment/${asks.no}/reply|}" method="post" th:id="'reply'+${reply.commentNo}" style="display:none">
                               <textarea class="summernote" name="reply"></textarea>
                                 <input type="hidden" name="commentGroup" th:value="${comment.commentNo}"/>
-                                <button type="submit"  id="reply-submit">reply</button>
+                                <button type="submit"  id="reply-submit">답장</button>
                         </form>
                     </div>
 </div>
@@ -224,17 +280,8 @@
     </div>
     <div class="right"></div>
 </div>
-<div class="bottom-nav">
-    <div>
-        <p> k.knock</p>
-        <p> k.knock</p>
-        <p> k.knock</p>
-        <p> k.knock</p>
-        <p> k.knock</p>
-    </div>
 
-
-</div>
+<br><br>
 </body>
 <script>
 //onclick
@@ -271,6 +318,20 @@ function clear(commentNo){
         document.getElementById("reply-button"+commentNo).style.display = "block";
 
     }
+
+document.getElementById("comment-write").addEventListener("submit", function(event) {
+    event.preventDefault();
+    let markdownText = document.getElementById("summernote").value;
+
+    function marked(markdownText) {
+        return "";
+    }
+
+    document.getElementById("summernote").innerHTML = marked(markdownText);
+    // form submit
+    this.submit();
+});
+
 
 
 
