--- a/src/main/resources/templates/members/memberList.html
+++ b/src/main/resources/templates/members/memberList.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <link rel="stylesheet" href="/css/bootstrap.css">
 <head> <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    
+
 </head>
 <style>
 
@@ -17,25 +17,24 @@
 <body>
 
 <div class="top">
-   <!-- <nav class="navbar navbar-expand-lg bg-light" style="background-color: #20c997">
+    <nav class="navbar navbar-expand-lg bg-light" style="background-color: #20c997">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">K.Knock</a>
+
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/members/new">회원가입/a>
-                    </li>
-                    <li class="nav-item">
+                    <li class="nav-item" style="color: #1a1e21!important;">
                         <a class="nav-link" href="/members">회원목록</a>
                     </li>
-
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/members/new">회원가입</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/questions/questionList">질문목록</a>
                     </li>
-
                     <li class="nav-item">
                         <a class="nav-link" href="/questions/new">질문 작성</a>
                     </li>
@@ -47,7 +46,6 @@
             </div>
         </div>
     </nav>
--->
 </div>
 <div class="gap"></div>
 <div class="grid-container">
