--- a/src/main/resources/templates/members/login.html
+++ b/src/main/resources/templates/members/login.html
@@ -13,21 +13,18 @@ layout:decorator="layout/default_layout">
             <h3 class="text-center font-weight-light my-4">Login</h3>
           </div>
           <div class="card-body">
-            <form id="frm" name="frm" action="/login/action" method="post">
-              <input type="hidden" name="_csrf" th:value="${_csrf.token}"/>
+            <form id="frm" name="frm" action="/loginProc" method="post">
+             <!-- <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">-->
               <div th:if="${param.error}">
                 <p th:text="${exception}" class="alert alert-danger"></p>
               </div>
               <div class="form-floating mb-3">
-                <input class="form-control" id="userid" name="userid" type="text" placeholder="id" required/>
+                <input class="form-control" id="userid" name="id" type="text" placeholder="id" required/>
               </div>
                 <div class="form-floating mb-3">
                     <input class="form-control" id="password" name="password" type="password" placeholder="Password" required/>
                 </div>
-              <div class="form-check mb-3">
-                <input class="form-check-input" id="remember-me" name="remember-me" type="checkbox"/>
-                <label class="form-check-label" for="remember-me">Remember Password</label>
-              </div>
+
               <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
                 <a class="btn btn-primary" href="javascript:fnSubmit();">Login</a>
               </div>
